[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["simopt*"]
# Ignore the build directory so we don't circularly include built distributions.
exclude = ["build*"]

[tool.setuptools.package-data]
"simopt.data_farming" = ["*.npz"]

[project]
name = "simoptlib"
version = "1.2.1"
authors = [
  { name = "David Eckman", email = "eckman@tamu.edu" },
  { name = "Shane Henderson", email = "sgh9@cornell.edu" },
  { name = "Sara Shashaani", email = "sshasha2@ncsu.edu" },
  { name = "William Grochocinski", email = "williamgrochocinski@gmail.com" },
]
description = "A testbed for simulation-optimization experiments."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.14"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "boltons>=0.6.3",
  "cvxpy>=1.6.0",
  "joblib>=1.0.0",
  "matplotlib>=3.9.0",
  "mrg32k3a[rust]>=2.0.0",
  "numpy>=2.0.0",
  "pandas>=2.2.2",
  "pydantic>=2.2.0",
  "scipy>=1.13.0",
  "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
  "jupytext==1.18.1",
  "pytest-xdist>=3.2.0",
  "pytest>=8.0.0",
  "ruff>=0.14.0",
  "ty>=0.0.1a28",
]
docs = ["sphinx>=8.2.0", "sphinx-autoapi>=3.6.0", "sphinx-rtd-theme>=3.0.0"]
notebooks = ["ipykernel>=7.0.0"]

[project.urls]
"Homepage" = "https://github.com/simopt-admin/simopt"
"Documentation" = "https://simopt.readthedocs.io/en/latest/"
