[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["simopt*"]
# Ignore the build directory so we don't circularly include built distributions.
exclude = ["build*"]

[tool.setuptools.package-data]
"simopt.data_farming" = ["*.npz"]

[project]
name = "simoptlib"
version = "1.2.1"
authors = [
  { name = "David Eckman", email = "eckman@tamu.edu" },
  { name = "Shane Henderson", email = "sgh9@cornell.edu" },
  { name = "Sara Shashaani", email = "sshasha2@ncsu.edu" },
  { name = "William Grochocinski", email = "williamgrochocinski@gmail.com" },
]
description = "A testbed for simulation-optimization experiments."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11,<3.14"
classifiers = [
  # Application Info
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Mathematics",
  # Python Versions
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  # Other Classifiers
  "Operating System :: OS Independent",
]
dependencies = [
    "boltons>=25.0.0",
    "cvxpy>=1.7.3",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "mrg32k3a[rust]>=2.0.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pydantic>=2.12.3",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "jupytext>=1.18.1",
    "pytest-xdist>=3.8.0",
    "pytest>=9.0.1",
    "ruff>=0.14.2",
    "ty>=0.0.1a26",
]
docs = ["sphinx>=8.2.3", "sphinx-autoapi>=3.6.1", "sphinx-rtd-theme>=3.0.2"]
notebooks = ["ipykernel>=7.1.0"]

[project.urls]
"Homepage" = "https://github.com/simopt-admin/simopt"
"Documentation" = "https://simopt.readthedocs.io/en/latest/"
"Issues" = "https://github.com/simopt-admin/simopt/issues"
